--- a/detail.html
+++ b/detail.html
@@ -8,19 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><a href="index.html">dikey.vn</a></h1>
-            <nav id="nav-links">
-                <!-- Các liên kết sẽ được thêm bằng JavaScript -->
-            </nav>
-        </div>
-    </header>
+    <script src="js/header.js"></script>
 
     <main>
         <div id="post-detail-container">
             <!-- Chi tiết bài tập sẽ được tải vào đây -->
         </div>
+        <div id="post-author-info"></div>
         <hr>
         <h3>Lời giải</h3>
         <div id="solutions-container">
@@ -32,7 +26,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 dikey.vn</p>
+        <p>&copy; 2025 dikey.vn</p>
     </footer>
 
     <!-- Firebase SDK -->
