--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><a href="index.html">dikey.vn</a></h1>
-            <nav id="nav-links">
-                <!-- Các liên kết sẽ được thêm bằng JavaScript -->
-            </nav>
-        </div>
-    </header>
+    <script src="js/header.js"></script>
+    <script src="js/auth.js"></script>
 
     <div class="main-container">
         <aside class="sidebar left-sidebar">
@@ -27,9 +21,10 @@
 
         <main class="main-content">
             <div class="welcome-section">
-                <img src="https://i.imgur.com/hM4zJ8p.gif" alt="Welcome GIF">
-                <h2>Chào mừng đến với dikey.vn!</h2>
-                <p>Nền tảng hỏi đáp và chia sẻ kiến thức hàng đầu Việt Nam.</p>
+                
+                <h2>Rèn đức, luyện tài vì ngày mai lập nghiệp</h2>
+                <p>Bạn muốn biết điều gì? <a href="post.html" class="btn">Đăng bài</a></p>
+                
             </div>
             <h2>Các Bài Tập Mới Nhất</h2>
             <div id="posts-container">
@@ -46,7 +41,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 dikey.vn</p>
+        <p>&copy; 2025 dikey.vn</p>
     </footer>
 
     <!-- Firebase SDK -->
