--- a/login.html
+++ b/login.html
@@ -8,14 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><a href="index.html">dikey.vn</a></h1>
-            <nav id="nav-links">
-                <!-- Các liên kết sẽ được thêm bằng JavaScript -->
-            </nav>
-        </div>
-    </header>
+    <script src="js/header.js"></script>
 
     <main>
         <div class="form-container">
@@ -42,7 +35,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 dikey.vn</p>
+        <p>&copy; 2025 dikey.vn</p>
     </footer>
 
     <!-- Firebase SDK -->
