--- a/post.html
+++ b/post.html
@@ -8,14 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><a href="index.html">dikey.vn</a></h1>
-            <nav id="nav-links">
-                <!-- Các liên kết sẽ được thêm bằng JavaScript -->
-            </nav>
-        </div>
-    </header>
+    <script src="js/header.js"></script>
+    <script src="js/auth.js"></script>
 
     <main>
         <div class="form-container">
@@ -26,11 +20,11 @@
                         <label for="category-select">Loại môn</label>
                         <select id="category-select" required>
                             <option value="">-- Chọn loại môn --</option>
-                            <option value="toán">Toán học</option>
-                            <option value="lý">Vật lý</option>
-                            <option value="hóa">Hóa học</option>
-                            <option value="van">Ngữ văn</option>
-                            <option value="anh">Ngoại ngữ</option>
+                            <option value="toan">Toán học</option>
+                            <option value="ly">Vật lý</option>
+                            <option value="hoa">Hóa học</option>
+                            <option value="van">Văn học</option>
+                            <option value="anh">Tiếng anh</option>
                             <option value="sinh">Sinh học</option>
                             <option value="su">Lịch sử</option>
                             <option value="dia">Địa lý</option>
@@ -64,7 +58,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 dikey.vn</p>
+        <p>&copy; 2025 dikey.vn</p>
     </footer>
 
     <!-- Firebase SDK -->
