--- a/post-wall.html
+++ b/post-wall.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tạo Bài Đăng Mới - Web Học Tập</title>
+    <title>Tạo Bài Đăng Mới - Dikey.vn</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><a href="index.html">Diễn đàn học tập</a></h1>
-            <nav id="nav-links">
-                <!-- Các liên kết sẽ được thêm bằng JavaScript -->
-            </nav>
-        </div>
-    </header>
+    <script src="js/header.js"></script>
 
     <main class="main-container">
         <div class="main-content">
@@ -39,7 +32,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Web Học Tập</p>
+        <p>&copy; 2025 Web Học Tập</p>
     </footer>
 
     <!-- Firebase SDK -->
