--- a/wall.html
+++ b/wall.html
@@ -3,51 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tường Nhà - Web Học Tập</title>
+    <title>Tường Nhà - Dikey.vn</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/rating.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1><a href="index.html">Diễn đàn học tập</a></h1>
-            <nav id="nav-links">
-                <!-- Các liên kết sẽ được thêm bằng JavaScript -->
-            </nav>
-        </div>
-    </header>
+    <script src="js/header.js"></script>
 
-    <main class="main-container">
-        <div class="profile-header">
-            <img src="https://via.placeholder.com/150" alt="Avatar" id="wall-avatar" class="profile-avatar-large">
-            <h2 id="wall-username">Tên người dùng</h2>
-            <div id="wall-actions">
-                <!-- Nút hành động (ví dụ: Chỉnh sửa trang cá nhân) sẽ ở đây -->
+    <main class="container">
+        <div id="profile-container">
+            <div class="profile-header">
+                <img id="profile-avatar" src="https://via.placeholder.com/150" alt="Avatar" class="avatar-large">
+                <div class="profile-info">
+                    <h2 id="profile-name">Tên người dùng</h2>
+                    <p id="profile-email">email@example.com</p>
+                    <p>Điểm: <span id="profile-score">0</span></p>
+                    <div class="profile-actions">
+                        <button class="btn" id="add-friend-btn"><i class="fas fa-user-plus"></i> Kết bạn</button>
+                        <button class="btn" id="follow-btn"><i class="fas fa-rss"></i> Theo dõi</button>
+                        <div id="rating-section"></div>
+                        <a href="#" class="btn" id="gift-coins-btn"><i class="fas fa-coins"></i> Tặng xu</a>
+                    </div>
+                    <a href="edit-profile.html" class="btn">Chỉnh sửa hồ sơ</a>
+                </div>
             </div>
-        </div>
 
-        <div class="main-content" id="wall-posts-container">
-            <!-- Các bài đăng trên tường sẽ được tải vào đây -->
+            <div id="wall-posts" class="tab-content active">
+                <h3>Tường nhà</h3>
+                <div id="gifts-list" class="row"></div>
+                <div id="wall-posts-container">
+                    <!-- Các bài đăng trên tường sẽ được tải vào đây -->
+                </div>
+            </div>
+
+            <div id="forum-posts" class="tab-content">
+                <h3>Bài đăng diễn đàn</h3>
+                <div id="user-posts-list">
+                    <!-- Danh sách bài đăng của người dùng sẽ được tải vào đây -->
+                </div>
+            </div>
+
+            <div id="achievements" class="tab-content">
+                <h3>Thành tích</h3>
+                <div id="achievements-list">
+                    <!-- Danh sách thành tích sẽ được tải vào đây -->
+                </div>
+            </div>
+
+            <div id="friends" class="tab-content">
+                <h3>Bạn bè</h3>
+                <div id="friends-list">
+                    <!-- Danh sách bạn bè sẽ được tải vào đây -->
+                </div>
+            </div>
+
+            <div id="followers" class="tab-content">
+                <h3>Người theo dõi</h3>
+                <div id="followers-list">
+                    <!-- Danh sách người theo dõi sẽ được tải vào đây -->
+                </div>
+            </div>
+
+
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 Web Học Tập</p>
+        <div class="container">
+            <p>&copy; 2025 dikey.vn</p>
+        </div>
     </footer>
 
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-    <!-- Scripts -->
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-storage-compat.js"></script>
 
     <script src="js/firebase-config.js"></script>
     <script src="js/auth.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/codexworld-rating.js"></script>
     <script src="js/wall.js"></script>
     <script src="js/chat_dikey.js"></script>
     <div id="chat-container"></div>
