--- a/wall.html
+++ b/wall.html
@@ -32,6 +32,7 @@
 
             <div id="wall-posts" class="tab-content active">
                 <h3>Tường nhà</h3>
+                <a href="post-wall.html" class="btn"><i class="fas fa-plus"></i> Đăng bài viết</a>
                 <div id="gifts-list" class="row"></div>
                 <div id="wall-posts-container">
                     <!-- Các bài đăng trên tường sẽ được tải vào đây -->
