--- a/detail.html
+++ b/detail.html
@@ -7,6 +7,45 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+    <style>
+        @media (max-width: 768px) {
+            .left-sidebar,
+            .right-sidebar {
+                display: none;
+            }
+            .main-container {
+                display: block;
+                padding: 0 !important;
+            }
+            .main-content {
+                padding: 0 15px;
+            }
+            #posts-container {
+                padding: 0;
+            }
+            #post-detail-container {
+                width: 100%;
+                box-sizing: border-box;
+                padding: 15px;
+            }
+            #post-detail-container img {
+                max-width: 100%;
+                height: auto;
+            }
+            header h1 {
+                font-size: 1.25rem;
+            }
+            nav#nav-links a,
+            nav#nav-links button {
+                padding: 0.5rem;
+                font-size: 0.9rem;
+            }
+            .nav-avatar {
+                width: 28px;
+                height: 28px;
+            }
+        }
+    </style>
 <body>
     <script src="js/header.js"></script>
 
@@ -39,5 +78,6 @@
     <script src="js/detail.js"></script>
     <script src="js/chat_dikey.js"></script>
     <div id="chat-container"></div>
+
 </body>
 </html>
