--- a/post-wall.html
+++ b/post-wall.html
@@ -62,7 +62,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Web Học Tập</p>
+        <p>&copy; 2025 dikey.vn</p>
     </footer>
 
     <!-- Firebase SDK -->
@@ -129,4 +129,5 @@
 </body>
 
 </html>
+
 
