--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dikey.vn</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/png">
+    <!-- Open Graph -->
+<meta property="og:title" content="Dikey.vn - Rèn đức, luyện tài vì ngày mai lập nghiệp">
+<meta property="og:description" content="Cộng đồng học tập, chia sẻ bài tập và luyện thi.">
+<meta property="og:image" content="https://micovan107.github.io/dikey.vn/favicon.png">
+<meta property="og:url" content="https://micovan107.github.io/dikey.vn/">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Dikey.vn">
+
+<!-- Twitter / Telegram / Discord card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Dikey.vn - Rèn đức, luyện tài vì ngày mai lập nghiệp">
+<meta name="twitter:description" content="Cộng đồng học tập, chia sẻ bài tập và luyện thi.">
+<meta name="twitter:image" content="https://micovan107.github.io/dikey.vn/favicon.png">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -137,6 +151,7 @@
 </body>
 
 </html>
+
 
 
 
