--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 </head>
@@ -151,6 +158,7 @@
 </body>
 
 </html>
+
 
 
 
