--- a/budget.html
+++ b/budget.html
@@ -35,6 +35,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -56,4 +63,5 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/budget.js"></script>
 </body>
+
 </html>
