--- a/detail.html
+++ b/detail.html
@@ -44,6 +44,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -80,4 +87,5 @@
     <div id="chat-container"></div>
 
 </body>
+
 </html>
