Fix HTML encoding issues in dikeygo.html

--- a/dikeygo.html
+++ b/dikeygo.html
@@ -43,6 +43,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 </head>
@@ -126,3 +133,4 @@
 
 </body>
 </html>
+
