Enhance mobile responsiveness in edit-profile.html
Added media query for mobile responsiveness and adjusted styles for user profile editing.

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -35,6 +35,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -118,4 +125,5 @@
     </div>
 </div>
 </body>
+
 </html>
