--- a/post-solution.html
+++ b/post-solution.html
@@ -35,6 +35,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -89,4 +96,5 @@
     <script src="js/auth.js"></script>
     <script src="js/post-solution.js"></script>
 </body>
+
 </html>
