--- a/post-wall.html
+++ b/post-wall.html
@@ -35,6 +35,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
         </style>
 <body>
@@ -129,5 +136,6 @@
 </body>
 
 </html>
+
 
 
