Update Firebase SDK and improve responsive styles
Updated Firebase SDK versions and adjusted media query styles for better responsiveness.

--- a/post.html
+++ b/post.html
@@ -35,6 +35,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -109,4 +116,5 @@
     <script src="js/chat_dikey.js"></script>
     <div id="chat-container"></div>
 </body>
+
 </html>
