Enhance responsive styles for quiz detail page
Added CSS rules for user profile display and dropdown alignment.

--- a/quiz-detail.html
+++ b/quiz-detail.html
@@ -35,6 +35,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -54,4 +61,5 @@
     <script src="js/firebase-config.js"></script>
     <script src="js/quiz-detail.js"></script>
 </body>
+
 </html>
