Enhance mobile styles for user profile display
Added styles for user name and dropdown alignment in mobile view.

--- a/shop.html
+++ b/shop.html
@@ -35,6 +35,13 @@
                 width: 28px;
                 height: 28px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -55,4 +62,5 @@
     <script src="js/auth.js"></script>
     <script src="js/shop.js"></script>
 </body>
+
 </html>
