--- a/wall.html
+++ b/wall.html
@@ -70,6 +70,13 @@
             .profile-actions .btn {
                 margin: 5px;
             }
+            .nav-user-name {
+    display: none !important;
+  }
+  .nav-user-profile .dropdown-content {
+    right: 0;
+    left: auto;
+  }
         }
     </style>
 <body>
@@ -199,4 +206,5 @@
     </div>
 </div>
 </body>
+
 </html>
