--- a/detail.html
+++ b/detail.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <style>
+        #post-detail-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+
         @media (max-width: 768px) {
             .left-sidebar,
             .right-sidebar {
@@ -44,7 +52,7 @@
                 width: 28px;
                 height: 28px;
             }
-            .nav-user-name {
+                        .nav-user-name {
     display: none !important;
   }
   .nav-user-profile .dropdown-content {
@@ -87,5 +95,4 @@
     <div id="chat-container"></div>
 
 </body>
-
 </html>
