--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <main class="main-content">
             <div class="welcome-section">
                 
-                <h2>Rèn đức, luyện tài vì ngày mai lập nghiệp</h2>
+                <h2> Học, học nữa, học mãi,... </h2>
                 <p>Bạn muốn biết điều gì? <a href="post.html" class="btn">Đăng bài</a></p>
                 
             </div>
@@ -154,4 +154,5 @@
     </div>
 </div>
 </body>
+
 </html>
