--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="main-container">
         <aside class="sidebar left-sidebar">
-            <h3>Phân Loại Môn Học</h3>
+            <h3>Môn học</h3></h3>
             <ul class="category-list">
                 <!-- Danh sách môn học sẽ được tải vào đây -->
             </ul>
@@ -76,14 +76,14 @@
                 <p>Bạn muốn biết điều gì? <a href="post.html" class="btn">Đăng bài</a></p>
                 
             </div>
-            <h2>Các Bài Tập Mới Nhất</h2>
+            
             <div id="posts-container">
                 <!-- Các bài tập sẽ được tải vào đây bằng JavaScript -->
             </div>
         </main>
 
         <aside class="sidebar right-sidebar">
-            <h3>Bảng Xếp Hạng</h3>
+            <h3>Xếp hạng</h3>
             <ul class="ranking-list">
                 <!-- Bảng xếp hạng sẽ được tải vào đây -->
             </ul>
@@ -156,3 +156,4 @@
 </body>
 
 </html>
+
