--- a/detail.html
+++ b/detail.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <style>
+        #solutions-container img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 10px auto;
+  border-radius: 6px;
+        }
+        
         #post-detail-container {
             background-color: #fff;
             padding: 20px;
@@ -95,4 +103,5 @@
     <div id="chat-container"></div>
 
 </body>
+
 </html>
