--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Chủ - dikey.vn</title>
+    <title>Dikey.vn</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/png">
     <meta property="og:title" content="Dikey.vn - Rèn đức, luyện tài vì ngày mai lập nghiệp">
 <meta property="og:description" content="Cộng đồng học tập, chia sẻ bài tập và luyện thi.">
@@ -156,5 +156,6 @@
 </body>
 
 </html>
+
 
 
