--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
 
     <footer>
         <p>&copy; 2025 dikey.vn</p>
+        <p>
+    <a href="all_posts.html">📚 Xem tất cả bài tập</a>
+  </p>
     </footer>
 
     <!-- Firebase SDK -->
@@ -156,6 +159,7 @@
 </body>
 
 </html>
+
 
 
 
