--- a/baitap/de-xay-ra-hien-tuong-giao-thoa-thi-phai.html
+++ b/baitap/de-xay-ra-hien-tuong-giao-thoa-thi-phai.html
@@ -13,14 +13,15 @@
             // Ngăn nút back
             history.pushState(null, "", location.href);
             window.onpopstate = () => {
-                location.replace("/detail.html?id=-OdxT5YRSioaTM5SRn67");
+                location.replace("./detail.html?id=-OdxT5YRSioaTM5SRn67");
             };
 
             // Tự chuyển ngay lập tức
-            location.replace("/detail.html?id=-OdxT5YRSioaTM5SRn67");
+            location.replace("./detail.html?id=-OdxT5YRSioaTM5SRn67");
         };
     </script>
 </head>
 <body style="background: #fff;">
 </body>
 </html>
+
