--- a/baitap/hay-xac-dinh-ham-vi-tan-so-tuong-ung-voi-cac-giai-buoc-song-do.html
+++ b/baitap/hay-xac-dinh-ham-vi-tan-so-tuong-ung-voi-cac-giai-buoc-song-do.html
@@ -13,14 +13,15 @@
             // Ngăn nút back
             history.pushState(null, "", location.href);
             window.onpopstate = () => {
-                location.replace("/detail.html?id=-OdxUiYRutOYtoV4LBhv");
+                location.replace("https://micovan107.github.io/dikey.vn/detail.html?id=-OdxUiYRutOYtoV4LBhv");
             };
 
             // Tự chuyển ngay lập tức
-            location.replace("/detail.html?id=-OdxUiYRutOYtoV4LBhv");
+            location.replace("https://micovan107.github.io/dikey.vn/detail.html?id=-OdxUiYRutOYtoV4LBhv");
         };
     </script>
 </head>
 <body style="background: #fff;">
 </body>
 </html>
+
