--- a/baitap/bai-3-tinh-dien-tich-hinh-ben-bai-4-mot-thua-ruong-hinh-chu-nhat-co-chieu-dai-6-m-chieu-rong-5-m-tren-thua-ruong-do-nguoi-ta-trong-rau-biet-rang-cu.html
+++ b/baitap/bai-3-tinh-dien-tich-hinh-ben-bai-4-mot-thua-ruong-hinh-chu-nhat-co-chieu-dai-6-m-chieu-rong-5-m-tren-thua-ruong-do-nguoi-ta-trong-rau-biet-rang-cu.html
@@ -13,14 +13,15 @@
             // Ngăn nút back
             history.pushState(null, "", location.href);
             window.onpopstate = () => {
-                location.replace("/detail.html?id=-OdxY9lgMxT9nvnAHom4");
+                location.replace("https://micovan107.github.io/dikey.vn/detail.html?id=-OdxY9lgMxT9nvnAHom4");
             };
 
             // Tự chuyển ngay lập tức
-            location.replace("/detail.html?id=-OdxY9lgMxT9nvnAHom4");
+            location.replace("https://micovan107.github.io/dikey.vn/detail.html?id=-OdxY9lgMxT9nvnAHom4");
         };
     </script>
 </head>
 <body style="background: #fff;">
 </body>
 </html>
+
