--- a/index.html
+++ b/index.html
@@ -20,14 +20,50 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <style>
+        /* Desktop Grid Layout */
+        .main-container {
+            display: grid;
+            grid-template-columns: 250px 1fr 250px; /* Sidebars 250px, main content takes the rest*/
+            gap: 15px; /* Space between columns */
+            padding: 10px;
+        }
+
+        .left-sidebar, .main-content, .right-sidebar {
+            margin: 0; /* Reset margin to remove unwanted space */
+            padding: 10px; /* Add some padding inside the columns */
+        }
+
+        .left-sidebar {
+            grid-column: 1 / 2;
+        }
+
+        .main-content {
+            grid-column: 2 / 3;
+        }
+
+        .right-sidebar {
+            grid-column: 3 / 4;
+        }
+
+        /* Tablet view */
+        @media (max-width: 1024px) {
+            .main-container {
+                grid-template-columns: 200px 1fr 200px; /* Smaller sidebars on tablets */
+                gap: 10px;
+                padding: 5px;
+            }
+        }
+
+        /* Mobile view */
         @media (max-width: 768px) {
+            .main-container {
+                display: block; /* Revert to block layout */
+                padding: 0 !important;
+            }
+
             .left-sidebar,
             .right-sidebar {
-                display: none;
-            }
-            .main-container {
-                display: block;
-                padding: 0 !important;
+                display: none; /* Hide sidebars */
             }
             .main-content {
                 padding: 0 15px;
@@ -47,13 +83,13 @@
                 width: 28px;
                 height: 28px;
             }
-                        .nav-user-name {
-    display: none !important;
-  }
-  .nav-user-profile .dropdown-content {
-    right: 0;
-    left: auto;
-  }
+            .nav-user-name {
+                display: none !important;
+            }
+            .nav-user-profile .dropdown-content {
+                right: 0;
+                left: auto;
+            }
         }
     </style>
 </head>
@@ -159,7 +195,3 @@
 </body>
 
 </html>
-
-
-
-
